--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -100,18 +100,8 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
+/*combined h3 into one*/
+h3 {
     margin-bottom: 10px;
     text-align: center;
 }
@@ -172,18 +162,8 @@ p {
 .social-media-marketing img {
     max-height: 200px;
 }
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
+/*combined h2 into one*/
+h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
